--- a/Assignment5_Power of Plots/assignment/Pymaceuticals/pymaceuticals_Homework_vF.ipynb
+++ b/Assignment5_Power of Plots/assignment/Pymaceuticals/pymaceuticals_Homework_vF.ipynb
@@ -10,7 +10,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Observations and Insights\n",
+    "- Overall, Capomulin had the most data points (230) and Propriva had the least data points (161).\n",
+    "- There is a positive correlation between average tumor volume and weight for Mouse s185 (Correlation coefficient: 0.84).\n",
+    "- In terms of effectiveness of the drugs, Capomulin and Ramicane were the most successful, as their final volumes were the lowest out of four given promising regimens.\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1467,9 +1473,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 120,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Drug Regimen\n",
+       "Capomulin    230\n",
+       "Ceftamin     178\n",
+       "Infubinol    178\n",
+       "Ketapril     188\n",
+       "Naftisol     186\n",
+       "Placebo      181\n",
+       "Propriva     161\n",
+       "Ramicane     228\n",
+       "Stelasyn     181\n",
+       "Zoniferol    182\n",
+       "Name: Timepoint, dtype: int64"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_df.groupby(['Drug Regimen']).count()['Timepoint']"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
    "source": []
   }
  ],
