--- a/Assignment6_Python API/starter_code/VacationPy_AA.ipynb
+++ b/Assignment6_Python API/starter_code/VacationPy_AA.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
        "19     83.07        1.99  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -369,7 +369,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5b2ac21e072c4651a854f08b04830340",
+       "model_id": "6ed19ceef88747eb8a96264be0db5276",
        "version_major": 2,
        "version_minor": 0
       },
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
        "5  Phulabani     76.86        2.37           0     20.47      84.23        36"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,13 +537,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "79c71f2afe0b4c0ab18d724bd678dadb",
+       "model_id": "e00ffb6ab8394139bc12a8d82313110e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +601,7 @@
        "['Geraldton', 'Inhambane', 'Teknaf', 'Ca mau', 'Akyab', 'Phulabani']"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +622,7 @@
        "'AIzaSyDVkcwT92OuDTFVr4yTvi8AdWTrRZnUx7M'"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +741,7 @@
        "5  Phulabani     76.86        2.37           0     20.47      84.23        36"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +860,7 @@
        "5  Phulabani     76.86        2.37           0     20.47      84.23        36"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -994,7 +994,7 @@
        "5                    6  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1010,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -1094,7 +1094,7 @@
        "      <td>114.60</td>\n",
        "      <td>47</td>\n",
        "      <td>4</td>\n",
-       "      <td>Ocean Centre Hotel</td>\n",
+       "      <td>1850's Stone Cottage</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
@@ -1118,7 +1118,7 @@
        "      <td>92.31</td>\n",
        "      <td>85</td>\n",
        "      <td>6</td>\n",
-       "      <td>Milky Resort</td>\n",
+       "      <td>Central Resort Ltd.</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1137,12 +1137,12 @@
        "0                    1  Hotel Casa Do Capitão  \n",
        "1                    2   Internationnal hotel  \n",
        "2                    3     Hotel KP's Salunki  \n",
-       "3                    4     Ocean Centre Hotel  \n",
+       "3                    4   1850's Stone Cottage  \n",
        "4                    5      Yuzana Aung Hotel  \n",
-       "5                    6           Milky Resort  "
+       "5                    6    Central Resort Ltd.  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1173,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1193,13 +1193,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "79c71f2afe0b4c0ab18d724bd678dadb",
+       "model_id": "e00ffb6ab8394139bc12a8d82313110e",
        "version_major": 2,
        "version_minor": 0
       },
